# ap101

./: .gitignore  Cargo.toml  DECISIONS.md  DEVELOPER_GUIDE.md  HISTORY.md  HISTORY.ru.md  LICENSE  README.md  README.ru.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
Confidential/: ap101-plan.md
codebase/: Cargo.toml
codebase/.github/workflows/: ci.yml
codebase/examples/ap101b-core/: Cargo.toml  ap101b-core.cdx.xml
codebase/examples/ap101b-core/src/: lib.rs
codebase/examples/ap101b-core/tests/: discipline.rs
codebase/examples/ap101s-cmos/: Cargo.toml  ap101s-cmos.cdx.xml
codebase/examples/ap101s-cmos/src/: lib.rs
codebase/examples/ap101s-cmos/tests/: discipline.rs
codebase/examples/clarus-audit/: Cargo.toml
codebase/examples/clarus-audit/src/: lib.rs
codebase/examples/clarus-audit/tests/: b_model.rs  s_model.rs
codebase/ferrite-core/: Cargo.toml  ferrite-core.cdx.xml
codebase/ferrite-core/src/: audit.rs  cell.rs  checksum.rs  lib.rs  telemetry.rs
codebase/ferrite-testkit/: Cargo.toml  ferrite-testkit.cdx.xml
codebase/ferrite-testkit/src/: heap.rs  lib.rs  strategy.rs
