[package]
name = "ap101s-cmos"
version = "0.1.0"
edition = "2021"
description = "AP-101S CMOS discipline example: ECC, multi-bit SEU, battery retention"

[dependencies]
ferrite-core = { path = "../../ferrite-core", features = ["std"] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
ferrite-testkit = { path = "../../ferrite-testkit" }
proptest = "1.4"
rand = "0.8"
